tests/baselines/reference/propertyAccessStringIndexSignature(noimplicitany=true).errors.txt
propertyAccessStringIndexSignature.ts(10,7): error TS2339: Property 'nope' does not exist on type 'Empty'.
propertyAccessStringIndexSignature.ts(11,1): error TS7053: Element implicitly has an 'any' type because expression of type '"that's ok"' can't be used to index type 'Empty'.
  Property 'that's ok' does not exist on type 'Empty'.


==== propertyAccessStringIndexSignature.ts (2 errors) ====
    interface Flags { [name: string]: boolean };
    declare let flags: Flags;
    flags.b;
    flags.f;
    flags.isNotNecessarilyNeverFalse;
    flags['this is fine'];
    
    interface Empty { }
    declare let empty: Empty;
    empty.nope;
          ~~~~
!!! error TS2339: Property 'nope' does not exist on type 'Empty'.
    empty["that's ok"];
    ~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"that's ok"' can't be used to index type 'Empty'.
!!! error TS7053:   Property 'that's ok' does not exist on type 'Empty'.
    